--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.1.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
